# CodeMaker-Coach-Agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
alembic/: env.py
docs/: AGENTS_AND_TOOLS.md  API_REFERENCE.md  ARCHITECTURE.md  BUILD_PLAN.md  INTERFACE_DESIGN.md  REQUIREMENTS.md
infra/: README.md  docker-compose.yml
scripts/: demo_mvp_generation.py
tests/: test_agent_complexity_analysis_node.py  test_agent_complexity_feedback_integration.py  test_agent_counterexample_feedback_integration.py  test_agent_counterexample_node.py  test_agent_diagnostic_feedback_integration.py  test_agent_error_diagnosis_node.py  test_agent_failed_case_explanation_node.py  test_agent_feedback_node.py  test_agent_hint_request_service.py  test_agent_nodes_workflow.py  test_agent_problem_generation_service.py  test_agent_public_learning_services_contract.py  test_agent_public_review_contract.py  test_agent_routing_node.py  test_agent_schemas.py  test_agent_submission_evaluation_node.py  test_agent_submission_review_service.py  test_agent_validation_node.py  test_api_cors.py  test_api_health.py  test_api_hint_request.py  test_api_problem_catalog.py  test_api_problem_generation.py  test_api_problem_report_hitl.py  test_api_submission_review.py  test_bfs_grid_shortest_path_testcase_generator.py  test_budget_cap_testcase_generator.py  test_cable_cutting_testcase_generator.py  test_config_settings.py  test_dfs_grid_components_testcase_generator.py  test_graphrag.py  test_hint_retrieval_policy.py  test_immigration_time_testcase_generator.py  (+12 more)
(+72 files in other folders)
